--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,114 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+// .form-wrap {
+//   display: flex;
+//   background: rgb(102, 175, 217,);
+//   padding-top: 5px;
+//   padding-bottom: 5px;
+//   position: sticky;
+//   top: 0;
+//   z-index: 100;
+//   align-items: center;
+// }
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 15px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  background: rgb(102, 175, 217, );
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
-.example code {
-  font-family: monospace;
+input {
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 0;
+  background: #ffffff !important;
+  outline: none;
+  height: 35px;
+  width: 200px;
+  color: #05027d;
   font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+  font-family: Tahoma;
+  border-right: none;
+  padding: 5px;
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.search-button {
+  background-image: url("/src/images/find.png");
+  width: 35px;
+  height: 35px;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 70%;
+  padding: 3px;
+  border-left: none;
+  border: 1px solid #cccccc;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.search-button:hover {
+  background-color: #e3e4ff;
+  transition: all 0.3s cubic-bezier(0.4, 0, 1, 1) 0s;
+}
+
+.gallery__image {
+    display: block;
+      width: 100%;
+      height: 250px;
+      transition: transform var(--animation-duration) var(--timing-function);
+};
+.gallery {
+      display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+        grid-gap: 16px;
+        padding: 0;
+        list-style: none;
+
+}
+.photo-card {
+display: block;
+  position: relative;
+  background-color: gainsboro;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery__link {
+display: block;
+  text-decoration: none;
+}
+
+.info {
+display: flex;
+  justify-content: space-evenly;
+}
+
+.info-item {
+margin-right: 5px;
+  font-size: 18px;
+  font-weight: bold;
+  padding-left: 5px;
+  color: rgb(84, 95, 158);
+}
+
+.load-more {
+      width: 350px;
+      height: 40px;
+      padding: 3px;
+      border: 1px solid #cccccc;
+      border-radius: 5px;
+      margin: 15px auto;
+        display: block;
+
+}
+
+.load-more:hover {
+  background-color: rgb(102, 175, 217, );
+  transition: all 0.3s cubic-bezier(0.4, 0, 1, 1) 0s;
+  
 }
